src/ShapeUpgrade/ShapeUpgrade_UnifySameDomain.hxx
@@ -65,13 +65,6 @@ DEFINE_STANDARD_HANDLE(ShapeUpgrade_UnifySameDomain, Standard_Transient)
 //! The algorithm provides a place holder for the history and collects the
 //! history by default.
 //! To avoid collecting of the history the place holder should be set to null handle.
-
-struct SubSequenceOfEdges
-{
-  TopTools_SequenceOfShape SeqsEdges;
-  TopoDS_Edge UnionEdges;
-};
-
 class ShapeUpgrade_UnifySameDomain : public Standard_Transient
 {
 
@@ -163,6 +156,10 @@ public:
 
 protected:
 
+  struct SubSequenceOfEdges;
+
+protected:
+
   //! This method makes if possible a common face from each
   //! group of faces lying on coincident surfaces
   Standard_EXPORT void UnifyFaces();
@@ -197,6 +194,16 @@ protected:
 
   //! Fills the history of the modifications during the operation.
   Standard_EXPORT void FillHistory();
+
+private:
+
+  //! Generates sub-sequences of edges from sequence of edges.
+  //! Edges from each subsequences can be merged into the one edge.
+  static void generateSubSeq (const TopTools_SequenceOfShape& anInpEdgeSeq,
+                              NCollection_Sequence<SubSequenceOfEdges>& SeqOfSubSeqOfEdges,
+                              Standard_Boolean IsClosed, double theAngTol, double theLinTol,
+                              const TopTools_MapOfShape& AvoidEdgeVrt,
+                              const TopTools_IndexedDataMapOfShapeListOfShape& theVFmap);
 
 private:
 
